# BNNQuanalyst

./: CMakeLists.txt  main.cpp  readme.md
BNNQuanalystSRC/: BNNBlock.cpp  BNNetwork.cpp  CNFEncoder_CUDD.cpp  CNFEncoder_Sylvan.cpp  Encoder_CUDD.cpp  Encoder_Sylvan.cpp  Options.cpp  QE_Interpreter.cpp  QE_Robust.cpp  QE_RobustSylvan.cpp  QE_SDComputer.cpp  QE_SDComputerSylvan.cpp  Query.cpp  QueryEngine.cpp  UtilLace.cpp  UtilParser.cpp  Utilities.cpp
benchmarks/inputs/: fixed-set-file-28-up.txt  fixed_set_file_random_100_10.txt  fixed_set_file_random_100_15.txt  fixed_set_file_random_100_20.txt  fixed_set_file_random_100_25.txt  fixed_set_file_random_400_10.txt  fixed_set_file_random_400_15.txt  fixed_set_file_random_400_20.txt  fixed_set_file_random_400_25.txt  fixed_set_file_random_64_10.txt  fixed_set_file_random_64_15.txt  fixed_set_file_random_64_20.txt  fixed_set_file_random_64_25.txt  fixed_set_file_random_784_10.txt  fixed_set_file_random_784_15.txt  fixed_set_file_random_784_20.txt  fixed_set_file_random_784_25.txt  instance_0_100.txt  instance_0_16.txt  instance_0_25.txt  instance_0_36.txt  instance_0_400.txt  instance_0_64.txt  instance_0_784.txt  instance_10_64.txt  instance_18_64.txt  instance_1_100.txt  instance_1_400.txt  instance_1_64.txt  instance_1_784.txt  instance_28_64.txt  instance_2_100.txt  instance_2_400.txt  instance_2_64.txt  instance_2_784.txt  instance_3_100.txt  instance_3_400.txt  instance_3_64.txt  instance_3_784.txt  instance_4_100.txt  (+104 more)
benchmarks/queries/: query_demo_explain  query_demo_maxDS  query_demo_robustness_fixed_indices_input  query_demo_robustness_hamming_distance_input  query_file_demo
cudd-3.0.0/cudd/: cudd.h  cuddUtil.c
include/: BNNBlock.h  BNNetwork.h  CNFEncoder.h  Encoder_CUDD.h  Encoder_Sylvan.h  Options.h  Query.h  QueryEngine.h  UtilLace.h  UtilParser.h  Utilities.h
libs/libsBNNQuanalyst/: CMakeLists.txt
libs/libsCUDD/: CMakeLists.txt
outputs/CNFSets_CUDD/: readme.md
outputs/EF_explain/: readme.md
outputs/PI_explain/: readme.md
sylvan-master/: CMakeLists.txt
sylvan-master/examples/: simple.cpp
sylvan-master/src/: CMakeLists.txt
(+206 files in other folders)
